# three_kingdoms_ai_agent

./: .gitignore  CLAUDE.md  LICENSE  pyproject.toml  requirements.txt
config/: llm.yaml  settings.yaml
docs/: current.md  decision.md  design.md  meme.md  plan.md  source_description.md  task.md
prompts/: orchestrator.yaml
prompts/agents/: chat.yaml  media.yaml  recipe.yaml
scripts/: run.bat  test_embed.ps1
src/three_kingdoms_ai_agent/: __init__.py  main.py
src/three_kingdoms_ai_agent/agents/: __init__.py  base.py  chat.py  media.py  recipe.py
src/three_kingdoms_ai_agent/core/: __init__.py  config.py  orchestrator.py  prompt_loader.py
src/three_kingdoms_ai_agent/core/channel/: __init__.py  base.py  cli.py
src/three_kingdoms_ai_agent/core/llm/: __init__.py  action.py  client.py  parser.py
src/three_kingdoms_ai_agent/core/memory/: __init__.py  base.py  long_term.py  window.py
src/three_kingdoms_ai_agent/core/rag/: __init__.py  embedder.py  router.py  store.py
tests/: __init__.py  test_config.py  test_prompt_loader.py
tests/agents/: test_base.py  test_recipe.py
tests/core/: test_orchestrator.py
tests/core/llm/: test_action.py  test_client.py  test_client_integration.py  test_parser.py
tests/core/memory/: test_memory.py
tests/core/rag/: test_embedder.py  test_router.py  test_router_integration.py  test_store.py
